tests/typing/good/testfile-override-2.scala

class A[T] { def m(x: T){} }
class B[T] extends A[T] { override def m(x: T){} }
object Main { def main(args: Array[String]) { } }
