tests/typing/bad/testfile-override-2.scala

class A { def m() {}; override def m() {} }
object Main { def main(args: Array[String]) { } }
